# simple-storage

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml  rust.yml
src/: lib.rs
tests/: lib_test.rs
