[package]
name = "simple-storage"
version = "0.0.1"
authors = ["Federico Vitale <fedevitale99@gmail.com>"]
edition = "2018"
description = "Super simple key-value storage."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
